adicionado rotas e toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<button mat-flat-button>Clique-me!</button>
+<mat-toolbar color="primary">
+  <span>Cadastro de clientes</span>
+  <span class="spacer"></span>
+  <a href="">Formulário</a>
+  <a href="">Consulta</a>
+</mat-toolbar>
+<router-outlet><router-outlet>
