--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
 <mat-toolbar color="primary">
+
   <span>Cadastro de clientes</span>
   <span class="spacer"></span>
-  <a href="">Formulário</a>
-  <a href="">Consulta</a>
+  <a routerLink="/cadastro">
+    <mat-icon fontIcon="feed"></mat-icon>
+    Cadastro</a>
+  <a routerLink="/consulta">
+    <mat-icon fontIcon="search"></mat-icon>
+    Consulta</a>
 </mat-toolbar>
 <router-outlet><router-outlet>
