--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,1 +1,75 @@
-<p>cadastro works!</p>
+<div fxLayout="row" fxLayoutAlign="center">
+    <div fxLayout="column"  fxFlex="1000px">
+        <form class="mt-60" #clientesFrm="ngForm" (ngSubmit)="salvar()">
+            <mat-card>
+               <mat-card-header>
+                    <mat-card-title>Dados Pessoais</mat-card-title>
+               </mat-card-header>
+               <mat-card-content class="mt-20" >
+                    <div fxLayout="row" fxLayoutAlign="start" fxLaoutGap="16px">
+                        <div fxLayout="column" fxFlex="800px">
+                        <mat-form-field class="full-width">
+                            <mat-label>Nome: *</mat-label>
+                            <input [(ngModel)]="cliente.nome" name="nome" matInput type="text" placeholder="Ex:José Da Silva">
+                        </mat-form-field>
+                        </div>
+                    </div>
+                  
+                    <div fxLayout="row" fxLayoutAlign="start" fxLaoutGap="16px">
+                        <div fxLayout="column" fxFlex="800px">
+                        <mat-form-field class="full-width">
+                            <mat-label>Email: *</mat-label>
+                            <input [(ngModel)]="cliente.email" name="email" matInput type="email" placeholder="Digite seu email">
+                        </mat-form-field>
+                        </div>
+                    </div>
+                    
+                    <div fxLayout="row" fxLayoutAlign="start" fxLaoutGap="16px">
+                        <div fxLayout="column" fxFlex="400px">
+                        <mat-form-field class="full-width">
+                            <mat-label>CPF: *</mat-label>
+                            <input [(ngModel)]="cliente.cpf" name="cpf" matInput type="text" placeholder="Digite seu CPF">
+                        </mat-form-field>
+                        </div>
+                    </div>
+
+                    
+                    <div fxLayout="row" fxLayoutAlign="start" fxLaoutGap="16px">
+                        <div fxLayout="column" fxFlex="400px">
+                        <mat-form-field class="full-width">
+                            <mat-label>Data Nascimento: *</mat-label>
+                            <input [(ngModel)]="cliente.dataNascimento" name="dataNascimento" matInput type="text" placeholder="Digite sua data de nascimento">
+                        </mat-form-field>
+                        </div>
+                    </div>
+                    
+                
+                    
+                </mat-card-content>
+
+                <mat-card-actions >
+                    <div fxFlex="row" fxLayout="space-between">
+                        <div fxFlex="column">
+                            <button type="submit" fxFlex="300px" mat-flat-button color="primary">
+                                <mat-icon fontIcon="save"></mat-icon>
+                                Salvar
+                            </button>
+                        </div>
+                         <div fxFlex="column">
+                            <button fxFlex="300px"  mat-flat-button>
+                                <mat-icon fontIcon="refresh"></mat-icon>
+                                Atualizar
+                            </button>
+                        </div>
+                        <div fxFlex="column">
+                            <button fxFlex="300px"  mat-flat-button color="accent">
+                                <mat-icon fontIcon="backspace"></mat-icon>
+                                Limpar
+                            </button>
+                        </div>
+                    </div>
+                </mat-card-actions>
+            </mat-card>
+        </form>
+    </div>
+</div>
